Clear MousePressed state on context menu to avoid initiating a drag https://bugs.webkit.org/show_bug.cgi?id=101786

Reviewed by Ojan Vafai.

Source/WebCore:

If a user initiates a drag via left mouse down, brings up the context menu,
and then cancels the context menu while keeping the left mouse button down,
then the drag operation will continue. This does not match the platform
conventions on Windows, Linux or Mac .

This change cancels the drag if the context menu is about to be displayed.

Test: fast/events/context-nodrag.html

* page/EventHandler.cpp:
(WebCore::EventHandler::sendContextMenuEvent):

Tools:

* DumpRenderTree/chromium/TestRunner/src/EventSender.cpp:
(WebTestRunner):
(WebTestRunner::EventSender::EventSender):
(WebTestRunner::EventSender::contextClick):
Only send a MouseUp on Windows. Keep the current mouse pressed state when
calling up a context menu.

LayoutTests:

If a user initiates a drag via left mouse down, brings up the context menu,
and then cancels the context menu while keeping the left mouse button down,
then the drag operation will continue. This does not match the platform
conventions on Windows, Linux or Mac .

This change cancels the drag if the context menu is about to be displayed.

* fast/events/context-nodrag.html: Added.
* fast/events/context-nodrag-expected.txt: Added.


Canonical link: https://commits.webkit.org/121097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135436 268f45cc-cd09-0410-ab3c-d52691b4dbfc